--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
+    "socket.io": "^4.5.2",
     "uuid": "^9.0.0"
   }
 }
